test/Harper/Tests/Good/issue019_print.har
main :: sideeffect -> ();
main = {
  eval print 42 ();
};