test/Harper/Tests/Bad/SideeffectInTypeDoesNotAffectArity.har
main :: sideeffect -> ();
main n = {
  (unit :: ()) = ();
  eval printLn "Bang!" unit;
};